force-app/main/default/objects/Evolution__c/Evolution__c.object-meta.xml
<CustomObject>
    <description>Objet pour le suivi des évolutions dans Salesforce</description>
    <label>Evolution</label>
    <nameField>
        <label>Nom de Suivi evolution</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Evolutions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>