force-app/main/default/objects/Evolution__c/fields/EVOL_Application__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Application__c</fullName>
    <label>Application</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MOBILITY</fullName>
            </value>
            <value>
                <fullName>VISION</fullName>
            </value>
            <value>
                <fullName>GPIC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>