force-app/main/default/objects/Evolution__c/fields/EVOL_Communication_faite__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Communication_faite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Communication faite</label>
    <type>Checkbox</type>
</CustomField>