force-app/main/default/objects/Evolution__c/fields/EVOL_Date_heure_installation_en_PREPROD__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Date_heure_installation_en_PREPROD__c</fullName>
    <label>Date/heure d&apos;installation en PREPROD</label>
    <type>DateTime</type>
</CustomField>