force-app/main/default/objects/Evolution__c/fields/EVOL_Date_Heure_Installation_en_PROD__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Date_Heure_Installation_en_PROD__c</fullName>
    <label>Date/heure d&apos;installation en PRODUCTION</label>
    <type>DateTime</type>
</CustomField>