force-app/main/default/objects/Evolution__c/fields/EVOL_Description_Evolution__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Description_Evolution__c</fullName>
    <label>Description Evolution</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>