force-app/main/default/objects/Evolution__c/fields/EVOL_Description_longue__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Description_longue__c</fullName>
    <label>Description longue</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>