force-app/main/default/objects/Evolution__c/fields/EVOL_Langue_de_traduction__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Langue_de_traduction__c</fullName>
    <label>Langue de traduction</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Français</fullName>
            </value>
            <value>
                <fullName>Italien</fullName>
            </value>
            <value>
                <fullName>Anglais</fullName>
            </value>
            <value>
                <fullName>Espagnol</fullName>
            </value>
            <value>
                <fullName>Portugais</fullName>
            </value>
            <value>
                <fullName>Polonais</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>