force-app/main/default/objects/Evolution__c/fields/EVOL_Mode_de_deploiement__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Mode_de_deploiement__c</fullName>
    <label>Mode de déploiement</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manuel</fullName>
            </value>
            <value>
                <fullName>Ensemble de modification(s)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>