force-app/main/default/objects/Evolution__c/fields/EVOL_Nom_composant__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Nom_composant__c</fullName>
    <label>Nom du(es) composant(s)</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>