force-app/main/default/objects/Evolution__c/fields/EVOL_Numero_Evolution__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Numero_Evolution__c</fullName>
    <displayFormat>EV-{YYYY}-{MM}-{0000}</displayFormat>
    <label>Numéro Evolution</label>
    <type>AutoNumber</type>
</CustomField>