force-app/main/default/objects/Evolution__c/fields/EVOL_Objet_Concerne__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Objet_Concerne__c</fullName>
    <label>Objet Concerné</label>
    <length>50</length>
    <type>Text</type>
</CustomField>