force-app/main/default/objects/Evolution__c/fields/EVOL_Qui_a_installe_en_PREPROD__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Qui_a_installe_en_PREPROD__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Qui a installé en PREPROD</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Evolutions1</relationshipName>
    <type>Lookup</type>
</CustomField>