force-app/main/default/objects/Evolution__c/fields/EVOL_Ref_ens_modifs_PROD__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Ref_ens_modifs_PROD__c</fullName>
    <label>Réf. ensemble de modification(s) PROD</label>
    <length>20</length>
    <type>Text</type>
</CustomField>