force-app/main/default/objects/Evolution__c/fields/EVOL_Reference_JIRA__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Reference_JIRA__c</fullName>
    <label>Référence JIRA</label>
    <length>20</length>
    <type>Text</type>
</CustomField>