force-app/main/default/objects/Evolution__c/fields/EVOL_Traduction_necessaire__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Traduction_necessaire__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Traduction nécéssaire</label>
    <type>Checkbox</type>
</CustomField>