force-app/main/default/objects/Evolution__c/fields/EVOL_Type_de_composant__c.field-meta.xml
<CustomField>
    <fullName>EVOL_Type_de_composant__c</fullName>
    <label>Type de composant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Application</fullName>
            </value>
            <value>
                <fullName>Champ Personnalisé</fullName>
            </value>
            <value>
                <fullName>Classe APEX</fullName>
            </value>
            <value>
                <fullName>Filtre</fullName>
            </value>
            <value>
                <fullName>Flux ou Process Builder</fullName>
            </value>
            <value>
                <fullName>Page Visualforce</fullName>
            </value>
            <value>
                <fullName>PickList</fullName>
            </value>
            <value>
                <fullName>Présentation de page</fullName>
            </value>
            <value>
                <fullName>Règle de duplication</fullName>
            </value>
            <value>
                <fullName>Règle de validation</fullName>
            </value>
            <value>
                <fullName>Setup SF ou FSL</fullName>
            </value>
            <value>
                <fullName>Workflow</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>