force-app/main/default/objects/Evolution__c/fields/PREPROD__c.field-meta.xml
<CustomField>
    <fullName>PREPROD__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PREPROD</label>
    <type>Checkbox</type>
</CustomField>