force-app/main/default/objects/Evolution__c/fields/PRODUCTION__c.field-meta.xml
<CustomField>
    <fullName>PRODUCTION__c</fullName>
    <defaultValue>false</defaultValue>
    <label>PRODUCTION</label>
    <type>Checkbox</type>
</CustomField>