force-app/main/default/objects/Evolution__c/fields/Statut__c.field-meta.xml
<CustomField>
    <fullName>Statut__c</fullName>
    <label>Statut</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Développement</fullName>
            </value>
            <value>
                <fullName>Déployé en PREPROD</fullName>
            </value>
            <value>
                <fullName>Déployé en PROD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>